package sae3_01;

import javafx.event.Event;
import javafx.event.EventHandler;

public class ControllerDiagramme implements EventHandler {

    private Model model;

    public ControllerDiagramme(Model model) {
        this.model = model;
    }

    @Override
    public void handle(Event event) {

    }
}
