package sae3_01;

public interface Observateur {

    void actualiser(Sujet s);

}
