package sae3_01;

import javafx.scene.layout.Pane;

public class VueDiagramme extends Pane implements Observateur {

    @Override
    public void actualiser(Sujet s) {

    }
}
