@startuml
interface Sujet {
    + enregistrerObservateur(Observateur)
    + supprimerObservateur(Observateur)
    + notifierObservateurs()
}

interface Observateur {
    + actualiser()
}

class VueArborescence extends TreeView implements Observateur {
    + actualiser()
}

class VueDiagramme extends Pane implements Observateur {
    + actualiser(TreeView<FileComposite>)
    - buildTree(TreeItem<FileComposite>, FileComposite)
}

class Model implements Sujet {
    - classes : ArrayList<Classe>
    - root : Repertoire
    - treeView : TreeView<FileComposite>
    - observateurs : ArrayList<Observateur>
    + ModelDiagramme()
    + setTreeView(TreeView<FileComposite>)
    + setRootTreeView(
    + getRootTreeView() : TreeView<FileComposite>
    + getTreeView() : TreeView<FileComposite>
    + analyserClasse(String)
    + ajouterClasse(Classe)
    + supprimerClasse(Classe)
    + enregistrerObservateur(Observateur)
    + supprimerObservateur(Observateur)
    + notifierObservateurs()
}

class ControllerArborescence extends EventHandler {
    - model : Model
    + ControllerArborescence()
    + handle(MouseEvent)
}

class ControllerDiagramme extends EventHandler {
    - model : Model
    + ControllerDiagramme()
    + handle(MouseEvent)
}

abstract FileComposite {
    # file : File
    + FileComposite(File)
    + getParentFolderName() : String
    + toString() : String
    + {abstract} getContenu() : List<FileComposite>
    + {abstract} isDirectory() : boolean
}

class Fichier extends FileComposite {
    # file : File
    + FileComposite(File)
    + getContenu() : List<FileComposite>
    + isDirectory() : boolean
}

class Repertoire extends FileComposite {
    # file : File
    - contenu : List<FileComposite>
    + FileComposite(File)
    + getContenu() : List<FileComposite>
    + isDirectory() : boolean
}

class Classe {
    - type : String
    - nom: String
    - package : String
    - attributs : ArrayList<String>
    - methodes : ArrayList<String>
    - coordonnées : int[]
    + Classe(String, String, String, ArrayList<String>, ArrayList<String>, int[])
    + getType() : String
    + getNom() : String
    + getPackage() : String
    + getAttributs() : ArrayList<String>
    + getMethodes() : ArrayList<String>
    + getCoordonnées()
    + setCoordonnées(int, int)
    + toString() : String
}

class Analyseur {
    + {static} analyseClasse(String)
    - {static} getClassModifier(Class<?>) : String
    - {static} getNom(Class<?>) : String
    - {static} getPackage(Class<?>) : String
    - {static} getAttributs(Class<?>) : ArrayList<String>
    - {static} getMethodes(Class<?>) : ArrayList<String>
    - {static} getModifierString(int) : String
    - {static} getModifierUMLSymbol(int) : String
}

Model "1" --> "0..*" Classe : classes
Model "1" --> "1" Repertoire : root
Model "1" --> "0..*" Observateur : observateurs

ControllerArborescence "1" --> "1" Model : model
ControllerDiagramme "1" --> "1" Model : model
@enduml